tg-509 cambia input time por text y expresion regular para evitar configuracion del SO por formato de horas

--- a/front-end/webapp/src/app/modules/internacion/components/effective-time/effective-time.component.scss
+++ b/front-end/webapp/src/app/modules/internacion/components/effective-time/effective-time.component.scss
@@ -1,8 +1,7 @@
 .flex-row {
 	display: flex;
-	align-items: flex-end;
-	font-style: italic;
+	align-items: center;
 	span {
-		padding-bottom: 8px;
+		font-style: italic;
 	}
 }
