--- a/front-end/webapp/src/app/modules/internacion/dialogs/effective-time-dialog/effective-time-dialog.component.html
+++ b/front-end/webapp/src/app/modules/internacion/dialogs/effective-time-dialog/effective-time-dialog.component.html
@@ -10,14 +10,14 @@
 			<mat-form-field appearance="outline">
 				<mat-label>Fecha</mat-label>
 				<input matInput id="date" [matDatepicker]="myDatepicker" formControlName="date"
-					[max]="today">
+					[max]="today" required>
 				<mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
 				<mat-datepicker #myDatepicker>
 				</mat-datepicker>
 			</mat-form-field>
 			<mat-form-field appearance="outline">
 				<mat-label>Hora</mat-label>
-				<input matInput id="time" type="time" formControlName="time" required>
+				<input matInput id="time" type="text" formControlName="time" pattern="([0-1]{1}[0-9]{1}|20|21|22|23):[0-5]{1}[0-9]{1}" required>
 			</mat-form-field>
 		</section>
 	</div>
