--- a/front-end/webapp/src/app/modules/presentation/components/personal-information/personal-information.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/personal-information/personal-information.component.html
@@ -3,7 +3,7 @@
 </ng-template>
 <div class="form-row">
 	<mat-icon color="primary" fontSet="material-icons-outlined">assignment_ind</mat-icon>
-	<h3 class="primary bold">Informacion Personal</h3>
+	<h3 class="primary bold">Información Personal</h3>
 </div>
 <div class="form-row">
 	<div>
@@ -39,7 +39,7 @@
 		<span *ngIf="personalInformation?.email; else noInformation" class="bold">{{personalInformation?.email}}</span>
 	</div>
 	<div>
-		<span clas="bold">Nro de telefono</span>
+		<span clas="bold">Nro de teléfono</span>
 		<span *ngIf="personalInformation?.phoneNumber; else noInformation" class="bold">{{personalInformation?.phoneNumber}}</span>
 	</div>
 </div>
