tg-524. [FE] Agregar directiva para habilitar condicionalmente boton de epicrisis

--- a/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -12,7 +12,7 @@
 					<span class="uppercase"
 						[translate]="'internaciones.internacion-paciente.actions.ADD_NOTA_EVOLUCION'"></span>
 				</button>
-				<button mat-flat-button color="primary" (click)="goToEpicrisis()">
+				<button mat-flat-button color="primary" (click)="goToEpicrisis()" *ngIf="anamnesisDoc?.confirmed && lastEvolutionNoteDoc?.confirmed">
 					<span class="uppercase"
 						[translate]="'internaciones.internacion-paciente.actions.ADD_EPICRISIS'"></span>
 				</button>
