--- a/front-end/webapp/src/app/modules/internacion/components/epicrisis-form/epicrisis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/epicrisis-form/epicrisis-form.component.html
@@ -256,7 +256,7 @@
 					  [translate]="'buttons.BACK'">
 				</span>
 			</button>
-			<button id="sign-confirm" mat-raised-button type="submit" color="primary">
+			<button id="sign-confirm" mat-raised-button type="submit" color="primary" *hasRole="['ESPECIALISTA_MEDICO']">
 				<span class="uppercase" [translate]="'internaciones.epicrisis.buttons.CONFIRM'"></span>
 			</button>
 		</section>
