--- a/front-end/webapp/src/app/modules/pacientes/routes/new-patient/new-patient.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/new-patient/new-patient.component.html
@@ -368,7 +368,7 @@
 							matInput>
 				</mat-form-field>
 			</div>
-			<div class="form-buttons">
+			<div *hasRole="['ADMINISTRATIVO']" class="form-buttons">
 				<button mat-stroked-button type="button" (click)="goBack()">
 					<span [translate]="'buttons.BACK'"></span>
 				</button>
