tg-545 define imagen de usuario generica

--- a/front-end/webapp/src/app/modules/presentation/components/patient-card/patient-card.component.scss
+++ b/front-end/webapp/src/app/modules/presentation/components/patient-card/patient-card.component.scss
@@ -10,7 +10,7 @@ mat-card.mat-card {
 mat-card-header {
 	align-items: center;
 	.header-image {
-		background-image: url("../../../../../assets/images/empty-profile.svg");
+		background-image: url("../../../../../assets/images/empty-profile.png");
 		background-size: cover;
 		width: 100px;
 		height: 100px;
