--- a/front-end/webapp/src/app/modules/internacion/routes/home/internaciones-home.component.html
+++ b/front-end/webapp/src/app/modules/internacion/routes/home/internaciones-home.component.html
@@ -1,5 +1,5 @@
 <app-content width="full">
-	<section *hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']">
+	<section>
 		<h2 class="page-title" [translate]="'internaciones.internados-table.TITLE'"></h2>
 		<app-internaciones-table></app-internaciones-table>
 	</section>
