--- a/front-end/webapp/src/app/modules/pacientes/routes/profile/profile.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/profile/profile.component.html
@@ -1,16 +1,14 @@
 <app-content width="full">
 	<section>
 		<div *hasRole="['ADMINISTRATIVO']">
-			<button *ngIf="internmentEpisode?.inProgress; else inactiveIE" mat-raised-button color="primary"
+			<button *ngIf="internmentEpisode?.id" mat-raised-button color="primary"
 					(click)="goInternmentEpisode()">
 				<span>Ver internación</span>
 			</button>
-		</div>
-		<ng-template #inactiveIE>
-			<button mat-raised-button color="primary" (click)="goNewInternment()" *hasRole="['ADMINISTRATIVO']">
+			<button *ngIf="!internmentEpisode?.inProgress" mat-raised-button color="primary" (click)="goNewInternment()">
 				<span>Iniciar internación</span>
 			</button>
-		</ng-template>
+		</div>
 		<div class="profile-card">
 			<app-patient-card [patient]="patientBasicData">
 				<div header class="header">
@@ -22,4 +20,5 @@
 			</app-patient-card>
 		</div>
 	</section>
+	<em *ngIf="!internmentEpisode?.id && internmentEpisode?.inProgress">El paciente se encuentra internado en otra institución.</em>
 </app-content>
