tg-556 add mensaje de validacion para diagnositco principal en anamnesis fix spinner junto con mensaje que no hay información simultaneos rename boton modal snomed de Cerrar a Cancelar

--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -211,7 +211,11 @@
 				</mat-card-content>
 			</mat-card>
 		</section>
-
+		<section id="validations" *ngIf="mainDiagnosisError">
+			<mat-card>
+				<mat-error class="mat-body-2">{{ mainDiagnosisError }}</mat-error>
+			</mat-card>
+		</section>
 		<section id="buttons" class="form-buttons">
 			<button mat-stroked-button type="button" color="primary" (click)="back()">
 				<span class="uppercase"
