--- a/front-end/webapp/src/app/modules/internacion/dialogs/concepts-search-dialog/concepts-search-dialog.component.html
+++ b/front-end/webapp/src/app/modules/internacion/dialogs/concepts-search-dialog/concepts-search-dialog.component.html
@@ -11,5 +11,5 @@
 	<app-table [model]="conceptsResultsTable" [mainStyle]="'secondary'"></app-table>
 </div>
 <mat-dialog-actions align="end">
-	<button mat-button mat-dialog-close><span [translate]="'buttons.CLOSE'"></span></button>
+	<button mat-stroked-button color="primary" mat-dialog-close><span [translate]="'buttons.CANCEL'"></span></button>
 </mat-dialog-actions>
