--- a/front-end/webapp/src/app/modules/presentation/components/table/table.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/table/table.component.html
@@ -1,35 +1,37 @@
-<mat-form-field *ngIf="filterEnabled">
-	<mat-label>Filtro</mat-label>
-	<input matInput (keyup)="applyFilter($event)">
-</mat-form-field>
-<table mat-table [dataSource]="dataSource" class="{{mainStyle}}" [ngClass]="{ 'mat-elevation-z8': mainStyle === 'primary' }">
-	<ng-container *ngFor="let column of columns" [matColumnDef]="column.columnDef">
-		<th mat-header-cell *matHeaderCellDef>{{ column.header | translate }}</th>
-		<td mat-cell [ngClass]="{'actions': !!column.action}" class="capitalize-first-letter" *matCellDef="let row">
-			<ng-container *ngIf="column.action else default">
-				<ng-container *ngIf="column.action.isDelete else button">
-					<button mat-icon-button color="warn" *ngIf="!column.action.hide || !column.action.hide(row)" (click)="column.action.do(row)">
-						<mat-icon>delete_outline</mat-icon>
-					</button>
+<div *ngIf="model">
+	<mat-form-field *ngIf="filterEnabled">
+		<mat-label>Filtro</mat-label>
+		<input matInput (keyup)="applyFilter($event)">
+	</mat-form-field>
+	<table mat-table [dataSource]="dataSource" class="{{mainStyle}}" [ngClass]="{ 'mat-elevation-z8': mainStyle === 'primary' }">
+		<ng-container *ngFor="let column of columns" [matColumnDef]="column.columnDef">
+			<th mat-header-cell *matHeaderCellDef>{{ column.header | translate }}</th>
+			<td mat-cell [ngClass]="{'actions': !!column.action}" class="capitalize-first-letter" *matCellDef="let row">
+				<ng-container *ngIf="column.action else default">
+					<ng-container *ngIf="column.action.isDelete else button">
+						<button mat-icon-button color="warn" *ngIf="!column.action.hide || !column.action.hide(row)" (click)="column.action.do(row)">
+							<mat-icon>delete_outline</mat-icon>
+						</button>
+					</ng-container>
+					<ng-template #button>
+						<button mat-flat-button color="primary" *ngIf="!column.action.hide || !column.action.hide(row)" (click)="column.action.do(row)">
+							<span *ngIf="column.action.text">{{ column.action.text | translate }}</span>
+						</button>
+					</ng-template>
 				</ng-container>
-				<ng-template #button>
-					<button mat-flat-button color="primary" *ngIf="!column.action.hide || !column.action.hide(row)" (click)="column.action.do(row)">
-						<span *ngIf="column.action.text">{{ column.action.text | translate }}</span>
-					</button>
+				<ng-template #default>
+					<span *ngIf="column.text">{{ column.text(row)  | translate }}</span>
 				</ng-template>
-			</ng-container>
-			<ng-template #default>
-				<span *ngIf="column.text">{{ column.text(row)  | translate }}</span>
-			</ng-template>
-		</td>
-	</ng-container>
+			</td>
+		</ng-container>
 
-	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-	<tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
-<mat-paginator *ngIf="(paginationEnabled) && (dataSource?.data?.length !== 0)"
-			   class="{{mainStyle}}"
-			   [pageSizeOptions]="[5, 10, 50]"
-			   showFirstLastButtons>
-</mat-paginator>
-<app-no-data class="{{mainStyle}}" *ngIf="dataSource?.data?.length === 0"></app-no-data>
+		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+		<tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+	</table>
+	<mat-paginator *ngIf="(paginationEnabled) && (dataSource?.data?.length !== 0)"
+				   class="{{mainStyle}}"
+				   [pageSizeOptions]="[5, 10, 50]"
+				   showFirstLastButtons>
+	</mat-paginator>
+	<app-no-data class="{{mainStyle}}" *ngIf="dataSource?.data?.length === 0"></app-no-data>
+</div>
