tg-579 Usa traducciones para el titulo de la página

--- a/front-end/webapp/src/app/modules/home/routes/instituciones/instituciones.component.html
+++ b/front-end/webapp/src/app/modules/home/routes/instituciones/instituciones.component.html
@@ -1,7 +1,7 @@
 <app-content width="narrow">
 	<mat-card>
 		<mat-card-header>
-			<mat-card-title>Instituciones</mat-card-title>
+			<mat-card-title translate="app.menu.INSTITUCIONES"></mat-card-title>
 		</mat-card-header>
 		<mat-card-content>
 			<mat-action-list role="list" *ngIf="institutions !== null; else loading">
